# TapeDesk

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: __init__.py  app.py  audio.py  cli.py  coinbase.py  hub.py  models.py  tmux.py
tapedesk/: __init__.py  app.py  audio.py  cli.py  click_generator.py  coinbase.py  hub.py  launcher.py  models.py  shared.py  tmux.py
tapeworm/: __init__.py  cli.py  hub.py  launcher.py  models.py  tmux.py
tests/: test_cli.py  test_coinbase.py  test_hub.py  test_models.py
