[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tapedesk"
version = "0.1.0"
description = "Terminal crypto market monitor with screener, level 2, and time-and-sales views"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "textual",
  "websockets",
  "pygame==2.6.1",
]

[project.scripts]
tapedesk = "tapedesk.cli:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["tapedesk*"]
